@@ -108,6 +108,15 @@ SPELL_INTERFERE = 0
 # instant retiring upon victory, set this option to 0.
 RETIRE_TIMER = -1
 
+# Option : ban players from transfering/storing (non-random) artifacts.
+# If an artifact is dropped/thrown/sold/send via telekinesis, that artifact
+# immediately disappears and becomes findable again.
+# (only exception is when a player dies[other than suicide]; in that case
+# artifacts drop just like all the other stuffs.)
+# This option should prevent artifacts from exhaustion and make it possible
+# to run a server for a longer term w/o reset.
+ANTI_ARTS_HORDE = true
+ 
 # Option : use the maximize mode when generating a character
 MAXIMIZE = true
 
