@@ -197,6 +197,7 @@ bool cfg_maximize = 1;
 s32b cfg_game_port = 18348;
 s32b cfg_console_port = 18349;
 int cfg_spell_interfere = 0;
+bool cfg_anti_arts_horde = 1;
 
 
 
