@@ -417,4 +417,5 @@ Change list for PernMangband
 - Ghost never bleeds.
 
 13/12/2001 (Jir)
-- newbies_cannot_drop specifies the minimum level for item/au dropping.
+- NEWBIES_CANNOT_DROP specifies the minimum level for item/au dropping.
+- ANTI_ARTS_HORDE configure option added.
